Revert "Add database migration and development setup improvements"

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     ]
   },
   "scripts": {
-    "dev": "concurrently \"vite\" \"cd backend && npm run dev\"",
+    "dev": "vite",
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build",
     "build:server": "vite build --config vite.config.server.ts",
