--- a/backend/package.json
+++ b/backend/package.json
@@ -6,12 +6,7 @@
     "dev": "ts-node-dev src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "show": "prisma studio",
-    "db:generate": "prisma generate",
-    "db:push": "prisma db push",
-    "db:migrate": "prisma migrate deploy",
-    "db:studio": "prisma studio",
-    "migrate-data": "npx ts-node scripts/migrate-data.ts"
+    "show": "prisma studio"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +17,6 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "module-name": "^0.0.1-security",
-    "node-fetch": "^2.7.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
