--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "module-name": "^0.0.1-security",
+    "react-router-dom": "^7.6.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
