--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     }
   ],
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "https://your-render-backend-url.onrender.com/api/$1" },
+    { "source": "/api/(.*)", "destination": "https://sunmount-app-builder.onrender.com/api/$1" },
     { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
