--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "db:setup": "npm run db:generate && npm run db:push && npm run db:seed"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "express": "^4.21.2",
+    "react-query": "^3.39.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -61,7 +62,7 @@
     "@react-three/fiber": "^8.18.0",
     "@swc/core": "^1.11.24",
     "@tailwindcss/typography": "^0.5.15",
-    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-query": "^5.83.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.5",
